# webview

./: .gitignore  CMakeLists.txt  README.md  SUPPORT_CHILD_WINDOW.md  appveyor.yml  exports.go  go.mod  main.cc  simpleApp.cc  webview.go  webview.h  webview_test.cc  webview_test.go
.github/workflows/: ccpp.yml  ci.yaml  release.yml
core/include/webview/detail/platform/windows/: reg_key.hh
examples/: open_window.c  open_window.go
examples/SimpleApp/: CMakeLists.txt  simpleApp.cc
examples/html/: child.html  webview.html
examples/simpleApp/: CMakeLists.txt  Info.plist.in
lib/go_webview/include/native/: webview_methods.h  webview_models.h
lib/go_webview/win/x64/: webview.exp  webview.lib
lib/go_webview/win/x86/: webview.exp  webview.lib
native/: logging.h  webview.h  webview_go_glue.c  webview_go_glue.h  webview_methods.h  webview_models.h
script/: build.bat  build.sh  build_open_window.bat  go-build.bat  rebuild.bat
